--- a/index.html
+++ b/index.html
@@ -7,12 +7,29 @@
 
     <title>FileUpload Free Template</title>
 
+    <!-- Add Fonts by Google-->
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed:500" rel="stylesheet">
+
     <!-- Bootstrap Style -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <div id="app">
+
+        <nav class="navbar navbar-expand-lg navbar-dark text-white bg-primary d-none d-lg-block">
+            <div class="container">
+                <div class="ml-auto">
+                    <ul class="navbar-nav top-nav">
+                        <li class="nav-item"><i class="fa fa-envelope"></i> email@example.mail</li>
+                        <li class="nav-item"><i class="fa fa-users"></i> Total Members: <span>123456</span></li>
+                        <li class="nav-item"><i class="fa fa-line-chart"></i> Total Paid: <span>$311490.06</li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="index.html">FileUpload</a>
@@ -37,18 +54,55 @@
 
         <div class="container mt-5">
             <div class="row justify-content-center">
-                <div class="col-sm-12 col-md-10 col-lg-8 col-xl-6">
+                <div class="col-sm-12 col-md-10 col-lg-8 col-xl-8 mb-5">
                     <h4 class="text-center">Upload Image</h4>
                     <div class="card rounded-0">
                         <div class="card-body">
-                            <form action="/" method="post">
+                            <form id="formAjax" action="/" method="post" enctype="multipart/form-data">
                                 <div class="input-group">
-                                    <input type="text" class="form-control rounded-0" placeholder="Choose your images" readonly>
-                                    <button class="btn btn-primary rounded-0" type="submit"><i class="fa fa-paperclip"></i> </button>
+                                    <input id="showFileName" type="text" name="files" class="form-control rounded-0" placeholder="Choose your images" readonly>
+                                    <button id="openFile" class="btn btn-primary rounded-0" type="button"><i class="fa fa-paperclip"></i> </button>
+                                    <input id="fileInput" type="file" name="photo" class="form-control" hidden multiple>
                                 </div>
+                                <div class="progress" style="height: 1px;">
+                                    <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <button id="submitButton" type="submit" class="btn btn-primary btn-block rounded-0 mt-2">Upload File</button>
                             </form>
                         </div>
                     </div>
+                </div>
+
+                <div class="col-12">
+                    <div class="card rounded-0">
+                        <div class="card-header rounded-0 bg-primary">
+                            <nav class="nav nav-pills nav-fill">
+                                <a class="nav-item nav-link text-white" href="#"><i class="fa fa-download"></i> DOWNLOAD LINK</a>
+                                <a class="nav-item nav-link text-white" href="#"><i class="fa fa-code"></i> CODE FOR FORUMS</a>
+                                <a class="nav-item nav-link text-white" href="#"><i class="fab fa-html5"></i> HTML CODE</a>
+                            </nav>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">http://src.example.com/image/gj3qcsrkbo9b</p>
+                            <p class="card-text">http://src.example.com/image/gj3qcsrkbo9b</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-12 footer text-center">
+                    [ ] with ❤ in Aceh Besar - (Naggroe Aceh Darussalam), Indonesia
+                    <ul class="nav my-2 justify-content-center">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Term of Service</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Privacy Policy</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -59,5 +113,6 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
