Menambah jQuery toast untuk pemberitahuan

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Bootstrap Style -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="node_modules/jquery-toast-plugin/dist/jquery.toast.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -113,6 +114,7 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="node_modules/jquery-toast-plugin/dist/jquery.toast.min.js"></script>
     <script src="assets/js/app.js"></script>
 </body>
 </html>
